add_library(libraster)

target_compile_definitions(
    libraster
    PRIVATE
        $<$<COMPILE_LANGUAGE:C>:HAVE_CONFIG_H NDEBUG _REENTRANT _REENTRANT >
        $<$<COMPILE_LANGUAGE:CXX>:>
        $<$<COMPILE_LANGUAGE:OBJC>:>
    )

target_include_directories(
    libraster
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/
        ${CMAKE_SOURCE_DIR}/src/arch/systemheaderoverride
        ${CMAKE_SOURCE_DIR}/src/arch/sdl
        ${CMAKE_SOURCE_DIR}/src/arch/shared
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/src/joyport
        /usr/include/SDL2
        /usr/include/libpng16
        /usr/include/aarch64-linux-gnu
        /usr/include/webp
    )

target_compile_options(
    libraster
    PRIVATE
        $<$<COMPILE_LANGUAGE:C>:-Wno-deprecated-declarations -g -O3 -W -Wall -Wextra -Wformat -Wformat-signedness -Wformat-security -Wshadow -Wpointer-arith -Wmissing-prototypes -Wstrict-prototypes -Wuninitialized -Wmissing-field-initializers -Wunreachable-code -Werror=implicit-function-declaration -Wfatal-errors -Wdiscarded-qualifiers -Wno-unknown-pragmas -Wunused-but-set-variable -Wno-sign-compare -Wno-ignored-qualifiers -Wno-unused-parameter -fopenmp>
        $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-declarations -g -O3 -Wall -Wformat -Wshadow -Wpointer-arith -Wuninitialized -Wunreachable-code -Wno-unused-parameter -Wfatal-errors -fopenmp -fno-exceptions>
        $<$<COMPILE_LANGUAGE:OBJC>:-Wno-deprecated-declarations >
    )

target_sources(
    libraster
    PRIVATE
        raster-cache.c
        raster-canvas.c
        raster-changes.c
        raster-cmdline-options.c
        raster-line-changes-sprite.c
        raster-line-changes.c
        raster-line.c
        raster-modes.c
        raster-resources.c
        raster-snapshot.c
        raster-sprite.c
        raster-sprite-status.c
        raster-sprite-cache.c
        raster.c
        raster-cache-const.h
        raster-cache-fill-1fff.h
        raster-cache-fill-39ff.h
        raster-cache-fill.h
        raster-cache-nibbles.h
        raster-cache-text-ext.h
        raster-cache-text-std.h
        raster-cache.h
        raster-canvas.h
        raster-changes.h
        raster-cmdline-options.h
        raster-line.h
        raster-modes.h
        raster-resources.h
        raster-snapshot.h
        raster-sprite.h
        raster-sprite-status.h
        raster-sprite-cache.h
        raster.h
    )

